--- a/module2/index.html
+++ b/module2/index.html
@@ -19,6 +19,7 @@
 
             <td>
                 <h1>Alan Turing</h1>
+                <!-- Definition list used for department information. -->
                 <em>
                     <dl>
                         <dt>
