module3-intro to css added, minor changes to readme

--- a/module1/index.html
+++ b/module1/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Alan Turing</h1>
+        <!-- Definition list used for department information. -->
         <em><dl>
             <dt>
                 Department of <a href="#">Computer Science</a>
