stylized basic website project updated, nearly done.

--- a/stylizedProject/index.html
+++ b/stylizedProject/index.html
@@ -80,13 +80,39 @@
     <hr>
 
     <section>
-        <div>
-            
+        <div class="contact-section">
+            <h2>
+                Get In Touch
+            </h2>
+
+            <h3>
+                If you're also a robot...
+            </h3>
+
+            <p>
+                Mama mia, de regizzioni automobili de lamborghini, mama de cafe lou pierre jaouse.
+            </p>
+
+            <button>
+                CONTACT ME
+            </button>
         </div>
     </section>
 
     <footer>
+        <div class="link-container">
+          <a href="#">
+            Facebook
+          </a>
+          <a href="#">
+            Twitter
+          </a>
+          <a href="#">LinkedIn</a>
+        </div>
 
-    </footer>
+        <p>
+            Robot co. 2023
+        </p>
+      </footer>
 </body>
 </html>
